4.5 -> 5.0:
    - jbj: files.c: fix: append to pkg->fileList.
    - jbj: files.c: use headerGetExtension everywhere.
    - jbj: transaction.c: eliminate hge warning.
    - jbj: rpmds.c: eliminate hge warning.
    - jbj: psm.c: eliminate a warning, simplify hge usage.
    - jbj: package.c: use headerGetExtension everywhere (fix double free).
    - jbj: fix: grr, headerGetEntry return code is backwards.
    - jbj: clean up some warnings.
    - jbj: change HGE_t prototype to see what remains to be fixed.
    - jbj: rpmsignature.c: use headerGetExtension everywhere.
    - jbj: rpmrollback.c: use headerGetExtension everywhere.
    - jbj: use (*hge), not headerGetExtension, everywhere.
    - jbj: psm.c: use headerGetExtension everywhere.
    - jbj: rpminstall.c: use headerGetExtension everywhere.
    - jbj: rpmfc.c: use headerGetExtension everywhere.
    - jbj: rpmte.c: use headerGetExtension everywhere.
    - jbj: depends.c: use headerGetExtension everywhere.
    - jbj: rpmts.c: use headerGetExtension everywhere.
    - jbj: nuke fi->keep_header.
    - jbj: rpmfi.c: use headerGetExtension everywhere. Ptooey! pita ...
    - jbj: scareMem = 0 everywhere FINALLY! Yippie!
    - jbj: rpmds.c: use headerGetExtension everywhere.
    - jbj: eliminate rpmtsSetSig(), use pgpSetSig() instead.
    - jbj: fix: trade a double free for a ~100b/header memleak.
    - jbj: fprint.c: use headerGetExtension everywhere.
    - jbj: hdrNVR.c: use headerGetExtension everywhere.
    - jbj: pkgio.c: use headerGetExtension everywhere.
    - jbj: signature.c: use headerGetExtension everywhere.
    - jbj: rpmdb.c: use headerGetExtension everywhere.
    - rse: fix va_copy fallback macros.
    - jbj: rpmdb.c: retrofit HE_s.
    - jbj: rpmte.c: use headerGetExtension.
    - jbj: add HE_s typedef to get rid of alloca baggage.
    - bero: Make rpm2cpio work for packages with payloads other than gzip
    - jbj: change to hRET_t for existing headerGetExtension uses.